# eventlybe

./: .env  Cargo.toml  README.md  example_data.json  example_user.json
migrations/2020-10-27-223208_create_events/: up.sql
migrations/2020-10-27-223208_create_events/src/: schema.rs
migrations/2020-10-29-184031_create_users/: up.sql
migrations/2020-11-23-183826_create_sessions/: up.sql
migrations/2020-11-26-172501_create_events/: up.sql
migrations/src/: schema.rs
src/: cors.rs  example_data.json  lib.rs  main.rs  models.rs  router.rs  schema.rs
src/events/: handler.rs  mod.rs  repository.rs  router.rs
src/sessions/: handler.rs  mod.rs  repository.rs
src/src/: schema.rs
src/users/: handler.rs  mod.rs  repository.rs  router.rs
