[package]
name = "backend"
version = "0.1.0"
authors = ["wbglaeser <ben.glaeser@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "<version>", features = ["postgres"] }
dotenv = "0.15.0"

# serde_json is just for the example, not required in general

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
