[package]
name = "backend"
version = "0.1.0"
authors = ["wbglaeser <ben.glaeser@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.82"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.3"
time = "0.1.44"
rand = "0.7.3"

# serde_json is just for the example, not required in general

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
